--- a/css/manual/style.css
+++ b/css/manual/style.css
@@ -17,9 +17,13 @@ Preloader Area CSS Code
     transform: translate(-50%,-50%);
     font: 14px arial;
   }
-
+.card-body{
+  padding: 10px 30px 20px;
+}
 /* ---Navbar--- */
-
+.warna-dark{
+  background-color: #2a2b3d;
+}
 .navbar {
   border-bottom: 7px solid salmon;
 }
@@ -53,15 +57,23 @@ Preloader Area CSS Code
 .mgt50px{
     margin-top: 50px;
   }
+.box-1{
+  font-family: "lato", sans-serif;
+}
 .display{
   border-collapse: collapse;
-  border-radius: 1em;
   overflow: hidden;
-  border: 1px black solid;
+  width: 100%;
+  border-collapse: collapse;
+/*  border: 1px black solid;*/
   color: white;
 }
 .display td{
   color: black;
+}
+.display .shadow-tr{
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+  font-size: 12px;
 }
 .display th{
   background-color: #398B93;
