--- a/css/manual/styletambahsampah.css
+++ b/css/manual/styletambahsampah.css
@@ -52,7 +52,7 @@ div.box-1{
 	padding-bottom: 40px;
 	box-shadow: 4px 5px 5px 4px #ccc;
 	border-radius: 0 0 15px 15px;
-	border-top:20px solid #04e9f1;
+	border-top:20px solid salmon;
 }
 
 h2{
